--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,4 @@ baseURL = "https://jhilker1.github.io/hugo-test"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "m10c"
-publishDir = "docs"
+#publishDir = "docs"
