--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://jhilker1.github.io/hugo-test"
+baseURL = "/hugo-test"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "m10c"
